name:                asciichart
version:             1.0.0
synopsis:            Line charts in terminal
license:             MIT
license-file:        LICENSE
author:              Fabian Beuke
maintainer:          mail@beuke.org
homepage:            https://github.com/madnight/asciichart
bug-reports:         https://github.com/madnight/asciichart/issues
copyright:           (c) 2018-Present Fabian Beuke
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
description:
  Line charts in terminal ╭┈╯ for Haskell (adaption from kroitor/asciichart).
  .
  @
    import Data.Text.Chart (plot)
    .
    main :: IO ()
    main = plot [1..20]
  @
  .

source-repository head
  type: git
  location: git://github.com/madnight/asciichart.git

library
  exposed-modules:     Data.Text.Chart
  build-depends:       base >=4.10 && <5
                     , array >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
