name:                asciichart
version:             1.0.0
synopsis:            Line charts in terminal
license:             MIT
license-file:        LICENSE
author:              Fabian Beuke
maintainer:          mail@beuke.org
homepage:            https://github.com/madnight/asciichart
bug-reports:         https://github.com/madnight/asciichart/issues
copyright:           (c) 2018-Present Fabian Beuke
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.8
                   , GHC == 7.10
                   , GHC == 8.0.1
                   , GHC == 8.2.2
                   , GHC == 8.4.1
description:
  Line charts in terminal ╭┈╯. Haskell port of kroitor/asciichart.
  .
  @
    import Data.Text.Chart (plot)
    .
    main :: IO ()
    main = plot [1..20]
  @
  .

source-repository head
  type: git
  location: git://github.com/madnight/asciichart.git

library
  exposed-modules:     Data.Text.Chart
  build-depends:       base >=3.0 && <5
                     , array >=0.5 && <0.6
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Test.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
    default-language:  Haskell2010
    build-depends:     base
                     , asciichart
                     , random
                     , silently
                     , raw-strings-qq
                     , hspec == 2.*
